testutil/src/snapshots/testutil__manage_drift_force_switch.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch drift-feature.
[gherrit] [WARN] The current git configuration does not match the expected state for a private branch.
[gherrit] [WARN]   - pushRemote: current='origin', expected='.'
[gherrit] [WARN] Overwriting manual changes (--force).
[gherrit] Branch drift-feature is now managed by GHerrit in public mode.
[gherrit]   - 'git push' will sync PRs and will also push drift-feature itself.
