testutil/src/snapshots/testutil__manage_invalid_config.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Invalid gherritManaged value: bad-value. Expected managedPublic, managedPrivate, or false.
